Fix search input styles on small device sizes

--- a/SingularityUI/app/styles/search.styl
+++ b/SingularityUI/app/styles/search.styl
@@ -14,6 +14,7 @@ section input[type="search"][required].with-search-options
     @media (max-width: 980px)
         float none
         width: 100%
+        margin-right 0
 
     @media (max-width: 767px)
         height auto
